--- a/tweets/templates/pages/home.html
+++ b/tweets/templates/pages/home.html
@@ -12,6 +12,17 @@
     </div>
   </div>
 
+  <div class="row mb-3">
+    <div class="col-md-4 mx-auto col-10">
+      <form class="form" action="{% url 'create-tweet' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" value="/" name="next"/>
+        <textarea name="content" class="form-control" placeholder="Your Tweet..."></textarea>
+        <button type="submit" class="btn btn-primary mt-2">Tweet</button>
+      </form>
+    </div>
+  </div>
+
       <div id="tweets" class="row">
         Replace Me
       </div>
@@ -42,7 +53,7 @@
 
     function formatTweetElement(tweet)
     {
-        var formattedTweet = "<div class='col-12 col-md-10 mx-auto mb-2 border rounded py-3' id='tweet-" + tweet.id + 
+        var formattedTweet = "<div class='col-12 col-md-10 mx-auto mb-2 border border-dark rounded py-3' id='tweet-" + tweet.id + 
         "' ><h3>" + tweet.content + "</h3><br>"+  LikeBtn(tweet) + "</div>"
         return formattedTweet
     }
