Sending Form Data via pure JavaScript.

--- a/tweets/templates/pages/home.html
+++ b/tweets/templates/pages/home.html
@@ -30,7 +30,21 @@
 <script>
     function handleTweetCreateFormDidSubmit (event){
       event.preventDefault()
-      console.log(event)
+      const myForm = event.target
+      const myFormData = new FormData(myForm)
+
+      const url = myForm.getAttribute("action")
+      const method = myForm.getAttribute("method")
+
+      const xhr = new XMLHttpRequest()
+      xhr.open(method, url)
+      xhr.onload = function(){
+        const serverResponse = xhr.response
+        const tweetEl = document.getElementById("tweets")  // how to get html element
+        loadTweets(tweetEl)
+      }
+      xhr.send(myFormData)
+
     }
 
     const tweetCreateFormEl = document.getElementById("tweet-create-form")
