--- a/tweets/templates/pages/home.html
+++ b/tweets/templates/pages/home.html
@@ -86,6 +86,10 @@
         // const errorResponse = response.responseJSON.content
         // handleTweetFormError(errorResponse, true)
       }
+      else if (response.status === 403 ){
+        alert("You must login!")
+        window.location.href = "/login"
+      }
       else if (response.status === 500 ){
         alert('Something went wrong, please try again later.')
       }
